# expRob

firstAssignment/: README.md
firstAssignment/robot_urdf/launch/: gazeboRobot.launch.py
firstAssignment/ros2_aruco/: setup.py
firstAssignment/ros2_aruco/ros2_aruco/: RobotNode.py  robotNodeB.py
secondAssignment/: README.md
secondAssignment/robot_urdf/: CMakeLists.txt  package.xml
secondAssignment/robot_urdf/launch/: gazebo2.launch.py
secondAssignment/robot_urdf/urdf/: robot2_laser.gazebo  robot2_laser.xacro  robot5.gazebo  robot5.xacro
secondAssignment/robot_urdf/worlds/: assignment2.world
secondAssignment/ros2_aruco/: package.xml  setup.py
secondAssignment/ros2_aruco/ros2_aruco/: RobotNode.py  move_action_node.py
secondAssignment/ros2_planning_system_examples/plansys2_patrol_navigation_example/: CMakeLists.txt  package.xml
secondAssignment/ros2_planning_system_examples/plansys2_patrol_navigation_example/launch/: patrol_example_fakesim_launch.py
secondAssignment/ros2_planning_system_examples/plansys2_patrol_navigation_example/params/: nav2_params.yaml
secondAssignment/ros2_planning_system_examples/plansys2_patrol_navigation_example/src/: move_action_node.cpp  patrol_action_node.cpp  patrolling_controller_node.cpp
